Use semantic tags where possible, fix SEO things, tweak style
Use semantic tags:

- `<article>` for main content
- `<footer>` for footer
- `<aside>` for right sidebar
- (Need to add header and L sidebar)

Fix SEO things:

- Add `alt` to logo image
- Add `aria-label` to logo link

Tweak style:

- Make sidebar scrollbar only appear on hover
- Shrink content from `100ch` to `80ch`

--- a/design/css/base.css
+++ b/design/css/base.css
@@ -38,11 +38,24 @@ body {
 *::-webkit-scrollbar {
   width: 7px;
   height: 7px;
+  opacity: 0;
 }
 
 /* sidebar scrollbar should be color of content area */
 .sgr-sidebar--root::-webkit-scrollbar-track {
   background: #fff;
+}
+
+.sgr-sidebar--root::-webkit-scrollbar-thumb {
+  background: #fff;
+}
+
+.sgr-sidebar--root::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+.sgr-sidebar--root:hover::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
 /* pre scrollbar should be color of pre */
